Revert "Updates to replace legacy doc client£ (#261)" (#337)
This reverts commit 2f34d9fa0ad945f4a3c062a30da33d1db85d4986.