@@ -2,34 +2,32 @@ package uk.gov.hmcts.reform.bailcaseapi.fixtures.documents;
 
 import com.google.common.io.ByteStreams;
 import java.io.IOException;
-import java.util.List;
+import java.util.Collections;
 import org.springframework.beans.factory.annotation.Qualifier;
-import org.springframework.context.annotation.ComponentScan;
 import org.springframework.core.io.Resource;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 import uk.gov.hmcts.reform.authorisation.generators.AuthTokenGenerator;
-import uk.gov.hmcts.reform.ccd.document.am.feign.CaseDocumentClient;
-import uk.gov.hmcts.reform.ccd.document.am.model.UploadResponse;
-import uk.gov.hmcts.reform.ccd.document.am.util.InMemoryMultipartFile;
+import uk.gov.hmcts.reform.document.DocumentUploadClientApi;
+import uk.gov.hmcts.reform.document.domain.UploadResponse;
+import uk.gov.hmcts.reform.document.utils.InMemoryMultipartFile;
 import uk.gov.hmcts.reform.bailcaseapi.domain.UserDetailsProvider;
 import uk.gov.hmcts.reform.bailcaseapi.domain.entities.UserDetails;
 import uk.gov.hmcts.reform.bailcaseapi.domain.entities.ccd.field.Document;
 
 @Service
-@ComponentScan("uk.gov.hmcts.reform.ccd.document.am.feign")
 public class DocumentManagementUploader implements DocumentUploader {
 
-    private final CaseDocumentClient caseDocumentClient;
+    private final DocumentUploadClientApi documentUploadClientApi;
     private final AuthTokenGenerator serviceAuthorizationTokenGenerator;
     private final UserDetailsProvider userDetailsProvider;
 
     public DocumentManagementUploader(
-        CaseDocumentClient caseDocumentClient,
+        DocumentUploadClientApi documentUploadClientApi,
         AuthTokenGenerator serviceAuthorizationTokenGenerator,
         @Qualifier("requestUser") UserDetailsProvider userDetailsProvider
     ) {
-        this.caseDocumentClient = caseDocumentClient;
+        this.documentUploadClientApi = documentUploadClientApi;
         this.serviceAuthorizationTokenGenerator = serviceAuthorizationTokenGenerator;
         this.userDetailsProvider = userDetailsProvider;
     }
@@ -53,17 +51,17 @@ public class DocumentManagementUploader implements DocumentUploader {
             );
 
             UploadResponse uploadResponse =
-                caseDocumentClient
-                    .uploadDocuments(
+                documentUploadClientApi
+                    .upload(
                         accessToken,
                         serviceAuthorizationToken,
-                        "Bail",
-                        "IA",
-                        List.of(file)
+                        userId,
+                        Collections.singletonList(file)
                     );
 
-            uk.gov.hmcts.reform.ccd.document.am.model.Document uploadedDocument =
+            uk.gov.hmcts.reform.document.domain.Document uploadedDocument =
                 uploadResponse
+                    .getEmbedded()
                     .getDocuments()
                     .get(0);
 
